fix spacings and margins

--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -12,6 +12,8 @@ h1, h2, h3, h4, h5, h6
 html, body
   background-color: $c-background
   user-select: none
+  margin: 0
+  padding: 0
 
 button
   padding: 10px 15px
